--- a/manifest.json
+++ b/manifest.json
@@ -35,6 +35,7 @@
     ],
     "web_accessible_resources": [
         "data/*.csv",
-        "images/*.png"
+        "images/*.png",
+        "images/*.jpg"
     ]
 }
