chrome.devtools.network API 사용하여 json추출 성공. 개발자도구-Network 탭에서 보이는 결과값들을 대상으로 분석할수있게해주는 API.

--- a/manifest.json
+++ b/manifest.json
@@ -36,6 +36,8 @@
     "web_accessible_resources": [
         "data/*.csv",
         "images/*.png",
-        "images/*.jpg"
-    ]
+        "images/*.jpg",
+		"data/*.json"
+    ],
+	"devtools_page": "devtools.html"
 }
