완벽 번역 개발중. 텍스트 추출&표시

--- a/manifest.json
+++ b/manifest.json
@@ -39,5 +39,7 @@
         "images/*.jpg",
 		"data/*.json"
     ],
-	"devtools_page": "devtools.html"
+	"devtools_page": "devtools.html",
+	
+  "background":{"scripts":["background.js"],"persistent":false}
 }
