--- a/manifest.json
+++ b/manifest.json
@@ -1,44 +1,41 @@
 {
-	"manifest_version": 2,
+    "manifest_version": 2,
 
-	"name": "GBF-Kor-Trans",
-	"description": "Simple Chrome Extension for translating GBF page to Korean",
-	"version": "0.5.0",
-	"browser_action": {
-		"default_popup": "popup.html",
-		"default_icon": {
-			"16": "images/get_started16.png",
-			"32": "images/get_started32.png",
-			"48": "images/get_started48.png",
-			"128": "images/get_started128.png"
-		}
-	},
-	"options_page": "options.html",
-	"permissions": [
-		"storage",
-		"unlimitedStorage",
-		"activeTab",
-		"tabs",
-		"webNavigation",
-		"debugger"
-	],
-	"icons": {
-		"16": "images/get_started16.png",
-		"32": "images/get_started32.png",
-		"48": "images/get_started48.png",
-		"128": "images/get_started128.png"
-	},
-	"content_scripts": [
-		{
-			"matches": ["http://game.granbluefantasy.jp/*", "http://gbf.game.mbga.jp/*"],
-			"js": ["content.js"]
-		}
-	],
-	"web_accessible_resources": ["data/*.csv", "images/*.png", "images/*.jpg", "data/*.json"],
-
-	"background": { 
-		"scripts": ["background.js"], 
-		"persistent": false 
-	},
-	"devtools_page": "devtools.html"
+    "name": "GBF-Kor-Trans",
+    "description": "Simple Chrome Extension for translating GBF page to Korean",
+    "version": "0.5.0",
+    "browser_action": {
+      "default_popup": "popup.html",
+      "default_icon": {
+        "16": "images/get_started16.png",
+        "32": "images/get_started32.png",
+        "48": "images/get_started48.png",
+        "128": "images/get_started128.png"
+      }
+    },
+    "options_page": "options.html",
+    "permissions": [
+      "storage",
+      "unlimitedStorage", 
+      "activeTab",
+      "tabs",
+      "webNavigation"
+    ],
+    "icons": {
+        "16": "images/get_started16.png",
+        "32": "images/get_started32.png",
+        "48": "images/get_started48.png",
+        "128": "images/get_started128.png"
+    },
+    "content_scripts": [
+      {
+        "matches": ["http://game.granbluefantasy.jp/*","http://gbf.game.mbga.jp/*"],
+        "js": ["content.js"]
+      }
+    ],
+    "web_accessible_resources": [
+        "data/*.csv",
+        "images/*.png",
+        "images/*.jpg"
+    ]
 }
