specify the permission

--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,7 @@
     },
     "options_page": "options.html",
     "permissions": [
+        "activeTab",
         "storage",
         "webNavigation",
         "debugger"
