updated from PR requests

--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,8 @@
         "background",
         "storage",
         "webNavigation",
-        "clipboardWrite"
+        "clipboardWrite",
+        "debugger"
     ],
     "icons": {
         "16": "images/get_started16.png",
