전투 텍스트 추출&번역 적용 구현 (#34)
* 전투 텍스트 추출 기능 구현

* 전투 텍스트 번역 적용 일부 구현. 전투 끝나고 나오는 이벤트 메세지만 번역 적용 안됨.

* 전투 텍스트 번역 구현 완료

* removed test data : battle.csv

* updated from PR requests

--- a/manifest.json
+++ b/manifest.json
@@ -19,8 +19,8 @@
         "background",
         "storage",
         "webNavigation",
-        "debugger",
-        "clipboardWrite"
+        "clipboardWrite",
+        "debugger"
     ],
     "icons": {
         "16": "images/get_started16.png",
