--- a/manifest.json
+++ b/manifest.json
@@ -16,11 +16,9 @@
     "options_page": "options.html",
     "permissions": [
         "activeTab",
-        "background",
         "storage",
         "webNavigation",
-        "clipboardWrite",
-        "debugger"
+        "clipboardWrite"
     ],
     "icons": {
         "16": "images/get_started16.png",
@@ -32,11 +30,5 @@
         "matches": ["http://game.granbluefantasy.jp/*", "http://gbf.game.mbga.jp/*"],
         "js": ["content.js"]
     }],
-    "web_accessible_resources": ["data/*.csv", "images/*.png", "images/*.jpg", "data/*.json"],
-
-    "background": {
-        "scripts": ["background.js"],
-        "persistent": false
-    },
-    "devtools_page": "devtools.html"
+    "web_accessible_resources": ["data/*.csv", "images/*.png", "images/*.jpg", "data/*.json"]
 }
